--- a/reports/report.Rmd
+++ b/reports/report.Rmd
@@ -10,6 +10,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
+knitr::opts_knit$set(root.dir = "..")
 knitr::opts_chunk$set(
   fig.path = "graphics/report-",
   echo = FALSE, warning = FALSE, message = FALSE
@@ -17,9 +18,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r load_project, echo=FALSE}
-setwd("..")
 ProjectTemplate::load.project()
-setwd("reports")
 ```
 
 ```{r}
